# Scan64

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/scan64-web/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
apps/scan64-web/src/: App.test.tsx  (+2 more)
benchmarks/diagnosis/: REVIEW.md  bundle.py
benchmarks/fixtures/: REVIEW.md  game_1.pgn  game_2.pgn  golden_corpus.json
docs/: maia.md  pitch.md  system-design.md  system-overview.md
docs/content/: opening-families.md
schemas/: events.schema.json  lesson-spec.schema.json  taxonomy.schema.json
scripts/: check.sh  check_licenses.py  generate_schemas.py  generate_taxonomy_schema.py
tests/conformance/: test_lesson_spec_fixtures.py
tests/fixtures/: maia_human_1500.json
tests/integration/: conftest.py  test_admission_controller.py  test_analysis_board_api.py  test_coach_authorization_boundary.py  test_coach_dashboard_api.py  test_content_attempt_shared_profile.py  test_context_habit_profiling.py  test_daily_training_api.py  test_data_lifecycle.py  test_detector_promotion_gate.py  test_engine_pool_isolation.py  test_exercise_pipeline.py  test_famous_game_shared_profile.py  test_idempotency.py  test_learning_opportunities_api.py  test_llm_provider_mocked.py  test_m18_learning_behavior.py  test_maia_adapter.py  test_maia_provider.py  test_maia_real_model.py  test_maia_realism.py  test_opponent_provider.py  test_pagination.py  test_play_api.py  test_public_benchmark_gating.py  test_renderer_conformance_cli.py  test_stockfish_pipeline.py  test_transfer_measurement.py
tests/property/: test_ingestion_invariants.py  test_mastery_updates.py  test_minimum_evidence_gating.py  test_pseudonymization_invariant.py  test_scheduler_reserved_capacity.py  test_transformation_validity.py
tests/regression/: test_golden_fixture_corpus_integrity.py  test_template_path_unaffected.py
tests/unit/: test_conformance_runner.py  test_content_catalog.py  test_content_validation.py  test_context_conditioned_skill.py  test_diagnosis_detectors.py  test_evidence_model.py  test_explanation_validator.py  test_famous_games.py  test_habit_detection.py  test_ingestion.py  test_lesson_verifier.py  test_maia_coverage_disclosure.py  test_mission_invariants.py  test_opening_content.py  test_opening_rotation.py  test_opportunity_ranking.py  test_persistence.py  test_player_model.py  test_plugin_interfaces.py  test_random_assignment_balance.py  test_scheduler.py  test_taxonomy.py  test_taxonomy_migration.py  test_transfer_exercises.py  test_visualization_dsl.py
(+125 files in other folders)
