[project]
name = "scan64"
version = "0.1.0"
description = "Chess improvement content engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.2",
    "chess-lesson-spec==0.1.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.51.0",
]

[project.scripts]
scan64-cli = "scan64.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scan64"]

[tool.uv.sources]
chess-lesson-spec = { workspace = true }

[tool.uv.workspace]
members = ["packages/chess-lesson-spec"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "real_model: requires operator-provided Maia and Stockfish binaries and weights",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "hypothesis>=6.156.6",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
